      is running an older version, the client will fall back to
      sending uncompressed requests.
    * The database conversion in 0.62.12 did not correct all
      out-of-order file streams.  A new conversion function is in
      0.62.13 that will examine every file stream and ensure that it
      is stored correctly in the database.
    * Install bucket handling now works for collections which were not
      fully installed.
    * A bug where database was left locked on exception during install
      when the download thread was still executing has been fixed.
    * The conaryclient code has been split into pieces.
    * Switched rollbacks to local@local:ROLLBACK
    * The main thread no longer blocks forever when the download
      thread fails.

  o Common Repository and Client changes
    * When a changeset is applied to the local system or committed to
      a networked repository, the fileIds are recomputed from the file
      objects and verified.  This prevents corrupted or miscomputed
      changesets from being committed to the repository or applied to
      the local system.
    * Matching referenced troves in collections is no longer dependent
      on sort order of internal dicts

  o Building/Branching changes
    * Many changes have been made to cloning, including sideways
      cloning (creating a clone at the same branch depth as the clone
      source), better cloning with multiple flavors, separate cloning
      of source and binaries, resilience against duplicate troves,
      proper use of existing fileIds during clones, simultaneous
      cloning of multiple troves, and better clonedFrom tracking.
    * The default optflags for x86 changed to remove -mcpu, as it is
      deprecated in gcc.

Changes in 0.62.12:
  * Conary will no longer create a "rootroot" group while installing
    users whose primary group is "root".  It will now call the
    appropriate tag handler for user/group modifications if the tag
    handler is installed.